Fixes bug where anchor-links wouldn't expand if the <a> tags wrapped html nodes, rather than just text. Misc other text improvements.

--- a/instructions/exportfromseed.html
+++ b/instructions/exportfromseed.html
@@ -92,7 +92,7 @@
 			<p style="text-align:center;">&ldquo;BlueCoastline&rdquo; theme</p>		
 		</a>
 		</div>
-		<p>BlueCoastline is one of several ocean themes that become available for your map once an ocean-map has been exported using this modified version of Amidst:</p>
+		<p>BlueCoastline is one of several ocean themes that become available for the Ink &amp; Parchment map once an ocean-mask has been exported using this modified version of Amidst:</p>
 				
 		<br style="clear:both;"/>
 		<p><a href="index.html">&#8617; Return to main map-making instructions</a></p>
