--- a/www/theme2.html
+++ b/www/theme2.html
@@ -41,7 +41,7 @@ head.js(
 <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
-<body style="background-image:url('img/shadedbay.jpg'); background-size: cover; background-repeat: no-repeat; font-family: sans-serif;')">
+<body style="background-image:url('img/shadedbay.jpg'); background-size: cover; background-repeat: no-repeat; font-family: sans-serif;">
 
 <center>
 <h1 id="mainTitle">Map of the Overworld</h1>
