--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@ head.js(
 <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
-<body style="background-image:url('img/superflat.png'); background-size: cover; background-repeat: no-repeat; font-family: sans-serif;')">
+<body style="background-image:url('img/superflat.png'); background-size: cover; background-repeat: no-repeat; font-family: sans-serif;">
 
 <center>
 <h1 id="mainTitle">Map of the Overworld</h1>
