Adds documentation support for iframes

--- a/instructions/index.html
+++ b/instructions/index.html
@@ -51,6 +51,7 @@
 	
     animatedcollapse.addDiv('AddingOceans_optimizing',        'fade=1, speed=350');
 
+    animatedcollapse.addDiv('ExtraFeatures_iframes',          'fade=1, speed=250');
     animatedcollapse.addDiv('ExtraFeatures_overlays',         'fade=1, speed=250');
     animatedcollapse.addDiv('ExtraFeatures_backgroundThemes', 'fade=1, speed=250');	
     animatedcollapse.addDiv('ExtraFeatures_defaultsrc',       'fade=1, speed=350');
@@ -734,7 +735,20 @@ range = 6400</pre>
 	
 	<br/>
     <h1><a id="ExtraFeatures"></a>Extra features</h1>
+	
+        <a id="ExtraFeatures_iframes_heading" href="index_expanded.html#ExtraFeatures_iframes_heading" class="headerhref" rel="toggle[ExtraFeatures_iframes]">
+            <div class="header-collapsed">
+              <div class="expander-content"><h2>iframe support</h2></div>
+              <div class="expander" style="font-size: 20px"><div class="expander-arrow"></div><div class="expander-bar1"></div><div class="expander-bar2"></div></div>
+            </div>
+        </a>
+        <div id="ExtraFeatures_iframes" style="display:none">
 
+      <p>You can include maps inside your own webpages by using iframes.</p>
+	
+	  <p><a href="iframes.html">iframe demonstration, with example HTML</a>.</p>
+
+        </div>
         <a id="ExtraFeatures_overlays_heading" href="index_expanded.html#ExtraFeatures_overlays_heading" class="headerhref" rel="toggle[ExtraFeatures_overlays]">
             <div class="header-collapsed">
               <div class="expander-content"><h2>Overlay icons</h2></div>
@@ -985,6 +999,7 @@ range = 6400</pre>
 
         <a href="#ExtraFeatures">Extra features</a>
           <ul>
+          <li><a href="#ExtraFeatures_iframes">iframe support</a></li>
           <li><a href="#ExtraFeatures_overlays_heading">Overlay icons</a></li>
           <li><a href="#ExtraFeatures_backgroundThemes_heading">Background themes</a></li>
           <li><a href="#ExtraFeatures_defaultsrc_heading">Setting a default src</a></li>
@@ -1021,7 +1036,7 @@ range = 6400</pre>
             <td><a href="https://github.com/jasonlong/architect-theme">architect-theme</a> is maintained by <a href="https://github.com/jasonlong">jasonlong</a>.</td>
           </tr>
           <tr>
-              <td><a href="index_expanded.html">Fully expanded version (no javascript)</a></td>
+              <td><a href="index_expanded.html?click">Fully expanded version (no javascript)</a></td>
 			<td></td>
           </tr>
         </table>
