--- a/instructions/index_expanded.html
+++ b/instructions/index_expanded.html
@@ -528,6 +528,13 @@ range = 6400</pre>
 	
 	<br/>
     <h1><a id="ExtraFeatures"></a>Extra features</h1>
+	
+        <a id="ExtraFeatures_iframes_heading"></a>
+        <h2>iframe support</h2>
+
+      <p>You can include maps inside your own webpages by using iframes.</p>
+	
+	  <p><a href="iframes.html">iframe demonstration, with example HTML</a>.</p>
 
         <a id="ExtraFeatures_overlays_heading"></a>
         <h2>Overlay icons</h2>
@@ -725,6 +732,7 @@ range = 6400</pre>
 
         <a href="#ExtraFeatures">Extra features</a>
           <ul>
+          <li><a href="#ExtraFeatures_iframes">iframe support</a></li>
           <li><a href="#ExtraFeatures_overlays_heading">Overlay icons</a></li>
           <li><a href="#ExtraFeatures_backgroundThemes_heading">Background themes</a></li>
           <li><a href="#ExtraFeatures_defaultsrc_heading">Setting a default src</a></li>
