Adds "What's new" section

--- a/instructions/index_expanded.html
+++ b/instructions/index_expanded.html
@@ -690,6 +690,12 @@ range = 6400</pre>
     <aside id="sidebarlow">
       <div class="contents">
 
+        <h1>What's new:</h1>
+          <ul>
+          <li><a href="iframes.html" style="color: red">iframe support</a></li>
+          <li><a href="https://raw.githubusercontent.com/Treer/minecraft-map/master/changlog.txt">See full change-log</a></li>
+          </ul>	  
+	  
         <h1>Quick navigation:</h1>
 
         <a href="#CreateYourOwn">Create your own</a>
