--- a/instructions/iframes.html
+++ b/instructions/iframes.html
@@ -47,7 +47,7 @@
 		<p>
 		<br/>
 		The HTML I used to display this map is:</p>
-			<pre>&lt;iframe width="390" height="410" src="https://googledrive.com/host/0B35KCzsTLKY1WnBhVmh4R1JtMUk/<span style="color: red;">iframeable.html</span>?src=example.txt&amp;amp;range=4800&amp;amp;showcoordinates=true" scrolling="no" style="border: none; overflow: hidden;" &gt;&lt;/iframe&gt;</pre>
+			<pre>&lt;iframe width="390" height="410" src="https://googledrive.com/host/0B35KCzsTLKY1WnBhVmh4R1JtMUk/<span style="color: red;">iframeable.html</span>?googlesrc=0B35KCzsTLKY1UTgyU2Y4ZEhSU2c&amp;amp;range=4800&amp;amp;showcoordinates=true" scrolling="no" style="border: none; overflow: hidden;" &gt;&lt;/iframe&gt;</pre>
 		
 		<p>
 			Or, if you were hosting it yourself:
