Hover-text no longer flashes when target it beneath it, or interferes with ability to click on targets under the hover-text graphic

--- a/www/iframe_demo.html
+++ b/www/iframe_demo.html
@@ -16,7 +16,7 @@
 	<p>There are 3 iframe sizes available by default, 390 pixels wide, 630 pixels wide, and 800 pixels wide. This example is 390 pixels wide:</p>
 	
 	<!-- Use the iframeable.html version of the map, rather than index.html -->
-	<iframe width="390" height="410" src="iframeable.html?src=example.txt&range=4800&showcoordinates=true" scrolling="no" style="border: none; overflow: hidden;" ></iframe>
+	<iframe width="390" height="410" src="iframeable.html?src=example.txt&amp;range=4800&amp;showcoordinates=true" scrolling="no" style="border: none; overflow: hidden;" ></iframe>
 	
 	<!-- For best results, use one of the three sizes below, as they match the map sizes currently in style.css
 	     (The height is 20 pixels more than the width to allow some room for the hover-text)
