--- a/www/iframeable.html
+++ b/www/iframeable.html
@@ -41,7 +41,7 @@ head.js(
 	</div>
 </div>
 <div style="position: absolute; left: 50%;">
-	<div id="hoverFrame" class="hidden-hoverFrame" style="position:relative; top: -25px; left: -50%; text-align: center; z-index: 30;">
+	<div id="hoverFrame" class="hidden-hoverFrame" style="position:relative; top: -25px; left: -50%; text-align: center; z-index: 30; pointer-events:none;">
 		<div id="locationDesc"></div>
 	</div>
 </div>
