Adds support for href targets, allowing iframed maps to provide hyperlinks affecting the full page (e.g. location gallery links), and hyperlinks affecting only the iframe (e.g. links to other maps, such as the nether)

--- a/www/iframeable.html
+++ b/www/iframeable.html
@@ -87,6 +87,10 @@ head.ready(
 				// =================				
 				// SetDefaultSrc('default.txt');
 							
+				// Because we're running in an iframe, we want links to open in the parent window, unless
+				// the link explicitly specifies otherwise.
+				SetDefaultHrefTarget("_parent");
+							
 				getSettingsAndMapLocations(
 					$(window).width(),
 					$(window).height(),
