--- a/instructions/index.html
+++ b/instructions/index.html
@@ -197,7 +197,7 @@
         <div id="FromDropbox" style="display:block">
 -->
 
-      <h2><a id="FromDropbox"></a>Run it from your Dropbox, or a wiki page.</h2>
+      <h2><a id="FromDropbox"></a>or run it from your Dropbox, or a wiki page.</h2>
 
       <p>Example <a href="dropbox.html">using Dropbox</a>.</p>
 
@@ -256,7 +256,7 @@
 
     <p><a href="https://googledrive.com/host/0B35KCzsTLKY1WnBhVmh4R1JtMUk/example.txt">An example location-list file.</a></p>
 
-    <p><a href="https://googledrive.com/host/0B35KCzsTLKY1WnBhVmh4R1JtMUk/template.txt">A template location-list file.</a></p>
+    <p><a href="https://googledrive.com/host/0B35KCzsTLKY1WnBhVmh4R1JtMUk/template/locationsfiletemplate.txt">A template location-list file.</a></p>
 
     <p>You can <a href="exportfromseed.html">automatically generate your location-list file</a> if you know the seed for the world.</p>
 
@@ -983,7 +983,7 @@ range = 6400</pre>
           <li><a href="#Trust">Or download source</a></li>
           </ul>
 
-        <a href="#LocationListFormat">Making a location list file</a>
+        <a href="#LocationListFormat">Making a location-list file</a>
           <ul>
           <!--<li><a href="#locationColumns">Location columns</a></li>-->
           <li><a href="#locationTypes_heading">type</a></li>
@@ -1010,14 +1010,16 @@ range = 6400</pre>
           <li><a href="#settings_oceantheme_heading">oceantheme</a></li>
           </ul>
 
-        <a href="#AddingOceans">Showing oceans</a>
+        <a href="#AddingOceans">Oceans</a>
           <ul>
+          <li><a href="#AddingOceans">Showing oceans</a></li>
           <li><a href="#AddingOceans_optimizing_heading">Optimizing load times</a></li>
+          <li><a href="exportfromseed.html">AMIDST Exporter</a></li>
           </ul>
 
         <a href="#ExtraFeatures">Extra features</a>
           <ul>
-          <li><a href="#ExtraFeatures_iframes">iframe support</a></li>
+          <li><a href="#ExtraFeatures_iframes_heading">iframe support</a></li>
           <li><a href="#ExtraFeatures_overlays_heading">Overlay icons</a></li>
           <li><a href="#ExtraFeatures_backgroundThemes_heading">Background themes</a></li>
           <li><a href="#ExtraFeatures_defaultsrc_heading">Setting a default src</a></li>
