--- a/instructions/index.html
+++ b/instructions/index.html
@@ -51,6 +51,7 @@
 	
     animatedcollapse.addDiv('AddingOceans_optimizing',        'fade=1, speed=350');
 
+    animatedcollapse.addDiv('ExtraFeatures_posters',          'fade=1, speed=250');
     animatedcollapse.addDiv('ExtraFeatures_iframes',          'fade=1, speed=250');
     animatedcollapse.addDiv('ExtraFeatures_overlays',         'fade=1, speed=250');
     animatedcollapse.addDiv('ExtraFeatures_backgroundThemes', 'fade=1, speed=250');	
@@ -751,6 +752,30 @@ range = 6400</pre>
 	<br/>
     <h1><a id="ExtraFeatures"></a>Extra features</h1>
 	
+	
+        <a id="ExtraFeatures_posters_heading" href="index_expanded.html#ExtraFeatures_posters_heading" class="headerhref" rel="toggle[ExtraFeatures_posters]">
+            <div class="header-expanded">
+              <div class="expander-content"><h2>Poster prints</h2></div>
+              <div class="expander" style="font-size: 20px"><div class="expander-arrow"></div><div class="expander-bar1"></div><div class="expander-bar2"></div></div>
+            </div>
+        </a>
+        <div id="ExtraFeatures_posters" style="display:block">
+
+	  <div style="float:right;">
+        <a href="posters.html">
+          <img src="images/wallmap-small.jpg" width="400" height="288" alt="printed wall map"/>
+		</a>
+      </div>
+	
+      <p>Instead of scrolling around fully zoomed in, the entire map can be printed out as a large poster.</p>
+
+      <p>When viewing a map online, there's a small icon at the bottom-left corner of the screen, clicking on that brings up options for make a poster sized image of the map.</p>
+	  
+	  <p>Here's the <a href="posters.html">poster I made from our server's map</a>, and how I made it.</p>
+	  
+	  <br style="clear:both;" />
+
+        </div>
         <a id="ExtraFeatures_iframes_heading" href="index_expanded.html#ExtraFeatures_iframes_heading" class="headerhref" rel="toggle[ExtraFeatures_iframes]">
             <div class="header-collapsed">
               <div class="expander-content"><h2>iframe support</h2></div>
@@ -763,39 +788,6 @@ range = 6400</pre>
 	
 	  <p><a href="iframes.html">iframe demonstration, with example HTML</a>.</p>
 
-        </div>
-        <a id="ExtraFeatures_overlays_heading" href="index_expanded.html#ExtraFeatures_overlays_heading" class="headerhref" rel="toggle[ExtraFeatures_overlays]">
-            <div class="header-collapsed">
-              <div class="expander-content"><h2>Overlay icons</h2></div>
-              <div class="expander" style="font-size: 20px"><div class="expander-arrow"></div><div class="expander-bar1"></div><div class="expander-bar2"></div></div>
-            </div>
-        </a>
-        <div id="ExtraFeatures_overlays" style="display:none">
-
-      <p>Overlays are where a map location overlays more than one icon to represent itself, for example the island icon can be combined 
-	  with the mushroom icon to show a mushroom island.</p>
-	
-      <p>Documentatin yet to come...</p>
-
-      <p>Until I write this section, you can have a look near the bottom of the <a href="https://googledrive.com/host/0B35KCzsTLKY1dTJreWVWdzNNa28/legend.txt">legend.txt</a>
-      file - it <a href="https://googledrive.com/host/0B35KCzsTLKY1dTJreWVWdzNNa28/index.html?src=legend.txt">implements</a> overlays - see the bottom right corner.</p>
-
-        </div>
-        <a id="ExtraFeatures_backgroundThemes_heading" href="index_expanded.html#ExtraFeatures_backgroundThemes_heading" class="headerhref" rel="toggle[ExtraFeatures_backgroundThemes]">
-            <div class="header-collapsed">
-              <div class="expander-content"><h2>Background themes</h2></div>
-              <div class="expander" style="font-size: 20px"><div class="expander-arrow"></div><div class="expander-bar1"></div><div class="expander-bar2"></div></div>
-            </div>
-        </a>
-        <div id="ExtraFeatures_backgroundThemes" style="display:none">
-
-      <p>If you replace <code>index.html</code> in your map URLs with <code>theme2.html</code>, then the ShadedBay 
-	  background theme will be used instead of the Superflat background theme.</p>
-	  
-	  <p>In the future I hope to add more themes, and other people are welcome to contribute. A theme consists of a background image than can compress reasonably small, and a background colour which is displayed under the background image (in case the image doesn't reach all the way to the bottom of the browser window).</p>
-
-	  <p><a href="https://googledrive.com/host/0B35KCzsTLKY1dTJreWVWdzNNa28/theme2.html?googlesrc=0B35KCzsTLKY1MEVCZzRJM01sR3c">Example map, using theme2</a></p>
-	  
         </div>
         <a id="ExtraFeatures_defaultsrc_heading" href="index_expanded.html#ExtraFeatures_defaultsrc_heading" class="headerhref" rel="toggle[ExtraFeatures_defaultsrc]">
             <div class="header-collapsed">
@@ -842,6 +834,39 @@ range = 6400</pre>
 	  
 	  <p>Now <span class="setting">oceansrc</span> will no longer be needed.</p>
 	  
+        </div>
+        <a id="ExtraFeatures_backgroundThemes_heading" href="index_expanded.html#ExtraFeatures_backgroundThemes_heading" class="headerhref" rel="toggle[ExtraFeatures_backgroundThemes]">
+            <div class="header-collapsed">
+              <div class="expander-content"><h2>Background themes</h2></div>
+              <div class="expander" style="font-size: 20px"><div class="expander-arrow"></div><div class="expander-bar1"></div><div class="expander-bar2"></div></div>
+            </div>
+        </a>
+        <div id="ExtraFeatures_backgroundThemes" style="display:none">
+
+      <p>If you replace <code>index.html</code> in your map URLs with <code>theme2.html</code>, then the ShadedBay 
+	  background theme will be used instead of the Superflat background theme.</p>
+	  
+	  <p>In the future I hope to add more themes, and other people are welcome to contribute. A theme consists of a background image than can compress reasonably small, and a background colour which is displayed under the background image (in case the image doesn't reach all the way to the bottom of the browser window).</p>
+
+	  <p><a href="https://googledrive.com/host/0B35KCzsTLKY1dTJreWVWdzNNa28/theme2.html?googlesrc=0B35KCzsTLKY1MEVCZzRJM01sR3c">Example map, using theme2</a></p>
+	  
+        </div>
+        <a id="ExtraFeatures_overlays_heading" href="index_expanded.html#ExtraFeatures_overlays_heading" class="headerhref" rel="toggle[ExtraFeatures_overlays]">
+            <div class="header-collapsed">
+              <div class="expander-content"><h2>Overlay icons</h2></div>
+              <div class="expander" style="font-size: 20px"><div class="expander-arrow"></div><div class="expander-bar1"></div><div class="expander-bar2"></div></div>
+            </div>
+        </a>
+        <div id="ExtraFeatures_overlays" style="display:none">
+
+      <p>Overlays are where a map location overlays more than one icon to represent itself, for example the island icon can be combined 
+	  with the mushroom icon to show a mushroom island.</p>
+	
+      <p>Documentatin yet to come...</p>
+
+      <p>Until I write this section, you can have a look near the bottom of the <a href="https://googledrive.com/host/0B35KCzsTLKY1dTJreWVWdzNNa28/legend.txt">legend.txt</a>
+      file - it <a href="https://googledrive.com/host/0B35KCzsTLKY1dTJreWVWdzNNa28/index.html?src=legend.txt">implements</a> overlays - see the bottom right corner.</p>
+
         </div>
 	
 	<br/>
@@ -973,8 +998,9 @@ range = 6400</pre>
       <div class="contents">
 
         <h1>What's new:</h1>
-          <ul>
-          <li><a href="iframes.html" style="color: red">iframe support</a></li>
+          <ul
+          <li><a href="#ExtraFeatures_posters_heading" style="color: red">Poster prints</a></li>		  
+          <li><a href="iframes.html" style="color: #bb0000">iframe support</a></li>
           <li><a href="https://raw.githubusercontent.com/Treer/minecraft-map/master/changlog.txt">See full change-log</a></li>
           </ul>	  
 	  
@@ -1022,11 +1048,12 @@ range = 6400</pre>
 
         <a href="#ExtraFeatures">Extra features</a>
           <ul>
+          <li><a href="#ExtraFeatures_posters_heading">Poster prints</a></li>
           <li><a href="#ExtraFeatures_iframes_heading">iframe support</a></li>
-          <li><a href="#ExtraFeatures_overlays_heading">Overlay icons</a></li>
-          <li><a href="#ExtraFeatures_backgroundThemes_heading">Background themes</a></li>
           <li><a href="#ExtraFeatures_defaultsrc_heading">Setting a default src</a></li>
           <li><a href="#ExtraFeatures_defaultsrc_heading">Setting default oceansrc</a></li>
+          <li><a href="#ExtraFeatures_backgroundThemes_heading">Background themes</a></li>
+          <li><a href="#ExtraFeatures_overlays_heading">Overlay icons</a></li>
           </ul>
 		  
 		  
