minor updates to instructions

--- a/instructions/about.html
+++ b/instructions/about.html
@@ -1,71 +1,71 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+	<meta charset='utf-8'>
+	<meta http-equiv="X-UA-Compatible" content="chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon-precomposed.png"><!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-    <link rel="apple-touch-icon-precomposed" sizes="72x72"   href="images/apple-touch-icon-72x72-precomposed.png"><!-- For the iPad mini and the first- and second-generation iPad on iOS ≤ 6: -->
-    <link rel="apple-touch-icon-precomposed" sizes="76x76"   href="images/apple-touch-icon-76x76-precomposed.png"><!-- For the iPad mini and the first- and second-generation iPad on iOS ≥ 7: -->
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/apple-touch-icon-120x120-precomposed.png"><!-- For iPhone with high-resolution Retina display running iOS ≥ 7: -->
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/apple-touch-icon-152x152-precomposed.png"><!-- For iPad with high-resolution Retina display running iOS ≥ 7: -->
-    <link rel="icon" sizes="196x196" href="images/apple-touch-icon.png"><!-- Chrome v31+ for Android -->
-    <link rel="icon" sizes="16x16" type="image/png" href="images/favicon.png" />
-	
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+	<link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon-precomposed.png"><!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+	<link rel="apple-touch-icon-precomposed" sizes="72x72"   href="images/apple-touch-icon-72x72-precomposed.png"><!-- For the iPad mini and the first- and second-generation iPad on iOS ≤ 6: -->
+	<link rel="apple-touch-icon-precomposed" sizes="76x76"   href="images/apple-touch-icon-76x76-precomposed.png"><!-- For the iPad mini and the first- and second-generation iPad on iOS ≥ 7: -->
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/apple-touch-icon-120x120-precomposed.png"><!-- For iPhone with high-resolution Retina display running iOS ≥ 7: -->
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/apple-touch-icon-152x152-precomposed.png"><!-- For iPad with high-resolution Retina display running iOS ≥ 7: -->
+	<link rel="icon" sizes="196x196" href="images/apple-touch-icon.png"><!-- Chrome v31+ for Android -->
+	<link rel="icon" sizes="16x16" type="image/png" href="images/favicon.png" />
 
-    <title>Building with blocks</title>
+	<!--[if lt IE 9]>
+	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+
+	<title>Building with blocks</title>
   </head>
 
   <body>
-    <header>
-      <div class="inner">
-        <a href="index.html"><h1>Building with blocks</h1></a>        
+	<header>
+	  <div class="inner">
+		<a href="index.html"><h1>Building with blocks</h1></a>
 		<h2>About me</h2>
-      </div>
-    </header>
+	  </div>
+	</header>
 
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">
+	<div id="content-wrapper">
+	  <div class="inner clearfix">
+		<section id="main-content">
 
 		<!--
 		<p><a href="index.html">&#8617; Return to main page</a></p>
 		-->
 
 		<img src="images/me.jpg" alt="picture of me"/>
-				
+
 		<p>This is a website I created for my Minecraft related projects. Currently there's only one.</p>
-		
+
 		<h2>Contacting me</h2>
-		
-		<p>If you have problems or questions about the map generator, it has a <a href="http://www.minecraftforum.net/topic/2763149-way-for-players-to-createshare-maps-of-the-server-they-play-on-and-link-to-pics-of-builds/">thread on minecraftforum.net</a>, which I hope to keep an eye on.</p>		
-		
-		<p>I can't guarantee I'll be prompt, as I like to avoid checking my email, but here are some other methods of contact:</p>
-		
+
+		<p>If you have problems or questions about the map generator, it has a <a href="http://www.minecraftforum.net/topic/2763149-way-for-players-to-createshare-maps-of-the-server-they-play-on-and-link-to-pics-of-builds/">thread on minecraftforum.net</a>, which I hope to keep an eye on.</p>
+
+		<p>Here are some other methods of contact:</p>
+
 		<ul>
-		<li>Email: drfrankenstone@ &lt;this domain&gt;</li>
-		<li>Reddit: DrFrankenstone</li>
+		<li style="font-weight: bold;">Email: drfrankenstone@<span style="font-style: italic;">&lt;this domain&gt;</span></li>
+		<li>Twitter: DrFrankenstone</li>
 		</ul>
-		
+
 		<p><a href="index.html">&#8617; Return to main page</a></p>
-		
+
 		<!--
 		<div class="footer">
-          <p class="repo-owner"><a href="https://github.com/jasonlong/architect-theme">architect-theme</a> is maintained by <a href="https://github.com/jasonlong">jasonlong</a>.</p>
-        </div>
+		  <p class="repo-owner"><a href="https://github.com/jasonlong/architect-theme">architect-theme</a> is maintained by <a href="https://github.com/jasonlong">jasonlong</a>.</p>
+		</div>
 		-->
 		</section>
 
-      </div>
-    </div>
+	  </div>
+	</div>
 
   </body>
 </html>
