--- a/instructions/exportfromseed.html
+++ b/instructions/exportfromseed.html
@@ -81,7 +81,7 @@
 		<p>The .jar file should run on a Mac, I apologise for not providing a native OS X app to download &mdash; I don't currently have access to a Mac.</p>
 		
 		<p>To launch in OS X, open a terminal window and type:</p>
-		<pre>java -Xmx1024M -jar AmidstExporter.jar</pre>
+		<pre>java -Xmx1024M -jar ./AmidstExporter.jar</pre>
 				
 		<h2>Oceans preview</h2>
 		
